[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/ui/menu/elements/Separator.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ui/menu/layouts/empty_layout.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/ui/menu/elements/ListButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/ui/menu/layouts/layout_02.gd" type="Script" id=4]

[node name="LayoutContainer" instance=ExtResource( 2 )]
script = ExtResource( 4 )

[node name="TopPlaceHolder" parent="." index="0"]
margin_bottom = 176.0

[node name="ListButton" parent="." index="1" instance=ExtResource( 3 )]
visible = false
margin_top = 156.0
margin_bottom = 196.0

[node name="Left" parent="ListButton/HBoxContainer" index="0"]
text = "  GRAPHICS"

[node name="Seperator" parent="." index="2" instance=ExtResource( 1 )]
margin_top = 176.0
margin_bottom = 184.0

[node name="ListButton2" parent="." index="3" instance=ExtResource( 3 )]
margin_top = 184.0
margin_bottom = 224.0

[node name="Left" parent="ListButton2/HBoxContainer" index="0"]
text = "  AUDIO"

[node name="Seperator2" parent="." index="4" instance=ExtResource( 1 )]
visible = false
margin_top = 220.0
margin_bottom = 228.0

[node name="ListButton3" parent="." index="5" instance=ExtResource( 3 )]
visible = false
margin_top = 208.0
margin_bottom = 248.0

[node name="Left" parent="ListButton3/HBoxContainer" index="0"]
text = "  CONTROLS"

[node name="Seperator3" parent="." index="6" instance=ExtResource( 1 )]
margin_top = 224.0
margin_bottom = 232.0

[node name="ListButton4" parent="." index="7" instance=ExtResource( 3 )]
margin_top = 232.0
margin_bottom = 272.0

[node name="Left" parent="ListButton4/HBoxContainer" index="0"]
text = "  LANGUAGE"

[node name="Seperator6" parent="." index="8" instance=ExtResource( 1 )]
margin_top = 272.0
margin_bottom = 280.0

[node name="ListButton6" parent="." index="9" instance=ExtResource( 3 )]
margin_top = 280.0
margin_bottom = 320.0

[node name="Left" parent="ListButton6/HBoxContainer" index="0"]
text = "  MISC"

[node name="Seperator5" parent="." index="10" instance=ExtResource( 1 )]
margin_top = 320.0
margin_bottom = 360.0
rect_min_size = Vector2( 0, 40 )

[node name="ListButton5" parent="." index="11" instance=ExtResource( 3 )]
margin_top = 360.0
margin_bottom = 400.0

[node name="Left" parent="ListButton5/HBoxContainer" index="0"]
text = "  GO BACK"

[node name="BottomPlaceHolder" parent="." index="12"]
margin_top = 400.0

[editable path="ListButton"]
[editable path="Seperator"]
[editable path="ListButton2"]
[editable path="ListButton3"]
[editable path="ListButton4"]
[editable path="ListButton6"]
[editable path="ListButton5"]
